# paperclip-kimi-wrapper

./: README.md  pyproject.toml
docs/: config.md  install.md  operations.md
examples/: agent-config.json  paperclip.env.example
src/kimi_paperclip_wrapper/: wrapper.py
tests/: test_wrapper.py
